Fixing flux from barbershop